Version 6   

--Fixed a rounding error on some CPUs in screen aspect ratio calculation.



Version 5   2011-January-25

--Fixed tutorial crash (thanks Stephen Lavelle).

--Added support for non-4:3 monitors (without black bars on sides).

--Added tutorial bookmarking.

--Rise marker sonar beat now modulated by path-finding distance instead of
  crow-flies distance for better feedback.

--Raised loudness of rise marker beat and lowered loudness of player part.




Version 4   2011-January-23

--Fixed vertical screen position after zoom.

--Fixed health bar mismatch if power-up picked up right before rise.

--Fixed bug that caused tutorial power-ups to be present in lower levels upon
  restart even when tutorial has already been completed.

--Removed accuracy power-up to improve feel of basic shooting, and also because
  its effect was hard to notice, making it confusing.

--Made rapid fire more rapid at lower levels so it's easier to notice.

--Made heat seek more noticeable at low levels, and much stronger at high 
  levels.

--Made bullet speed faster at lower levels so it's easier to notice.

--Changed default set to [speed,heart,heart] to make shooting feel better
  at start of game.  Knock-down still results in [empty,heart,heart].

--Fixed timing of brief player immortality on rise-out.

--Fixed heat seek targeting to prevent it from jumping oddly between targets.

--Added a blended overlay to soften background tile colors.

--Shrank level maximum dimensions to 96x96 instead of 128x128.  Less wandering.

--Added glowing shimmer over player, enemies, and power tokens, with trails 
  for motion.

--Added drop shadows along wall edges.

--Added drop shadows under player, enemies, bullets, tokens, and crosshair.

--Changed so that current powers are carried down when intentionally entering
  something (though not when unintentionally knocked-down).

--Changed so that current powers revert to default when you are knocked down,